--- a/index.html
+++ b/index.html
@@ -5,22 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cryptos & Bytes</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <header>
+    <header id="top">
         <div class="titulo">
-            <img src="logo.png" alt="Logo de Crypto & Bytes">
+            <img src="img/logo.png" alt="Logo de Crypto & Bytes">
             <h1 class="silkscreen-regular">Cryptos & Bytes</h1>      
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="#top">Inicio</a></li>
                 <li><a href="#noticias">Noticias</a></li>
                 <li><a href="#footer">Contacto</a></li>
                 <li><a href="#footer">¿Quienes Somos?</a></li>
@@ -29,23 +27,41 @@
     </header>
     <main id="noticias">
         <section id="destacados">
-        <div class="destacada-izq">
+        <section class="destacada-izq">
             <article >
-                <h2>Noticia 1</h2>
-                <p>Texto de la noticia 1</p>
+                <h2>Indicadores técnicos de Bitcoin apuntan a USD 150,000 en 2025</h2>
+                
+                    <p>Las configuraciones técnicas del precio de <strong>Bitcoin,</strong> incluyendo un patrón de "taza con asa", sugieren un movimiento explosivo hacia los <strong>USD 100,000-150,000</strong> en los próximos meses.</p>
+                
+                <p><strong>Bitcoin BTC</strong> €51,063 está mostrando señales que pueden indicar un movimiento explosivo hacia el rango de USD 100,000-150,000 para el primer trimestre de 2025.</p>
+                <p class="leer-mas"><a href="#">Leer Más</a></p>
             </article>
             <article>
-                <h2>Noticia 2</h2>
-                <p>Texto de la noticia 1</p>
+                <h2>La criptomoneda Worldcoin toca un precio que no se veía desde hace un año</h2>
+                <p>Fuente: <a href="https://www.criptonoticias.com/mercados/criptomoneda-worldcoin-precio-caida/" target="_blank">Click para ver</a></p>
+                <p>El proyecto, presente en más de un centenar de países, enfrenta investigaciones por parte de algunos gobiernos.</p>
+                <p>Hechos Claves: </p>
+                <ul>
+                    <li>El precio de Worldcoin ha caído 87% desde su máximo histórico.</li>
+                        <li>La criptomoneda se ve afectada por grandes transacciones que ha hecho Alameda Research.</li>
+                </ul>
+                <p class="leer-mas"><a href="#">Leer Más</a></p>
             </article>
-        </div>
-        <div class="destacada-centro">
+        </section>
+        <section class="destacada-centro">
             <article>
-                <h2>Noticia 3</h2>
-                <p>Texto de la noticia 1</p>
+                <h2>Tether invierte 100 millones de dólares en empresa argentina</h2>
+                <p>Fuente: <a href="https://www.criptonoticias.com/negocios/usdt-100-millones-empresa-argentina/" target="_blank">click para ver</a> </p>
+                <img src="img/tether.jpg" alt="Theter Image" >
+                <p>Hechos clave:</p>
+<ul>
+<li>Tether quiere diversificar sus inversiones en los sectores agrícola y alimentario.</li>
+<li>Adecoagro tiene operaciones en Argentina y Brasil.</li>
+</ul>
+<p class="leer-mas"><a href="#">Leer Más</a></p>
             </article>
-        </div>
-        <div class="destacada-der">
+        </section>
+        <section class="destacada-der">
             <article>
                 <h2>Noticia 4</h2>
                 <p>Texto de la noticia 1</p>
@@ -62,7 +78,7 @@
                 <h2>Noticia 7</h2>
                 <p>Texto de la noticia 1</p>
             </article>
-        </div>
+        </section>
         </section>
 
 
@@ -73,14 +89,14 @@
                 <div class="cripto-container">
                     <article class="cripto-news">
                         <h3>"Nunca vendas tu Bitcoin", dijo Trump admitiendo que aún está aprendiendo qué es la criptomoneda.</h3>
-                        <img src="trumpbtc.jpg" alt="Trump is supporting Bitcoin">
+                        <img src="img/trumpbtc.jpg" alt="Trump is supporting Bitcoin">
                         <p>
                             Trump prometió convertir a EE.UU. en la capital mundial de las criptomonedas, mantener todas las reservas de bitcoin del gobierno y superar a China en el sector.
                         </p>
                     </article>
                     <article class="cripto-news">
                         <h3>La industria de las criptomonedas es la segunda con más objetivo de estafas de identidad en 2024: lo muestra un informe.</h3>
-                        <img src="hacker.jpg" alt="Hacker de Cryptomonedas" class="fotos-tecnologia">
+                        <img src="img/hacker.jpg" alt="Hacker de Cryptomonedas" class="fotos-tecnologia">
                         <p>
                             En el segundo trimestre de 2024, la industria de las criptomonedas fue la segunda más atacada por fraudes de identidad, con el 29% de los intentos globales. El uso de deepfakes y bots ha intensificado estos fraudes, causando grandes pérdidas financieras.
                         </p>        
@@ -92,14 +108,14 @@
                 <h2 class="efectos-main">Tecnología</h2>
                 <article class="tecnologia-news">
                     <h3>Nuevo modelo de OpenAI puede razonar y destaca en programación, pero es más lento.</h3>
-                    <img src="o1-research.webp" alt="ChatGPT modelo o1 de OpenAI" class="fotos-tecnologia">
+                    <img src="img/o1-research.webp" alt="ChatGPT modelo o1 de OpenAI" class="fotos-tecnologia">
                     <p>
                         OpenAI ha presentado o1, un modelo avanzado que destaca en razonamiento y resolución de problemas, pero es más lento. También se lanza o1-mini, una versión más rápida para programación.
                     </p>
                 </article>
                 <article class="tecnologia-news">
                     <h3>YouTube quiere que los adolescentes vean menos contenido sobre peso y acondicionamiento físico.</h3>
-                    <img src="teen-watching-youtube.avif" alt="Adolescente mirando youtube desde un celular" class="fotos-tecnologia">
+                    <img src="img/teen-watching-youtube.avif" alt="Adolescente mirando youtube desde un celular" class="fotos-tecnologia">
                     <p>
                         YouTube está limitando las recomendaciones de contenido que idealiza estándares físicos o muestra agresión social para proteger la autoimagen de los adolescentes.
                     </p>
@@ -147,9 +163,9 @@
                 <h2 id="footer">Contactos</h2>
                     <ul class="listas-none">
                         <li><img src="" alt=""> Horarios de atención: 08:00 a 18:00hs</li>
-                        <li><img src="email.png" alt="Email"><a href="mailto:hola@cryptosnbytes.com"> hola@cryptosnbytes.com</a></li>
-                        <li><img src="telegram.png" alt="Telegram"> +54 9 11 0110-1001 o @CryptoBytes</li>
-                        <li><img src="office.png" alt="Oficinas"><abbr title="Avenida"> Av.</abbr> del Libertador 10.010, <abbr title="Ciudad Autónoma de Buenos Aires">C.A.B.A</abbr></li>
+                        <li><img src="img/email.png" alt="Email"><a href="mailto:hola@cryptosnbytes.com"> hola@cryptosnbytes.com</a></li>
+                        <li><img src="img/telegram.png" alt="Telegram"> +54 9 11 0110-1001 o @CryptoBytes</li>
+                        <li><img src="img/office.png" alt="Oficinas"><abbr title="Avenida"> Av.</abbr> del Libertador 10.010, <abbr title="Ciudad Autónoma de Buenos Aires">C.A.B.A</abbr></li>
                         <li><img src="" alt=""> Preguntas Frecuentes</li>
                         <p>
                             Estamos aquí para ayudarte y responder tus preguntas. No dudes en ponerte en contacto con nosotros.
@@ -165,10 +181,10 @@
             <div class="redes">
                 <h3>¡Seguinos en nuestras redes!</h3>
                     <ul class="listas-none">
-                        <li><a href="https://www.x.com" target="_blank"><img src="x.png" alt="X"></a></li>
-                        <li><a href="https://www.instagram.com" target="_blank"><img src="instagram.png" alt="Instagram"></a></li>
-                        <li><a href="https://www.tiktok.com" target="_blank"><img src="tik-tok.png" alt="Tik Tok"></a></li>
-                        <li><a href="https://www.youtube.com" target="_blank"><img src="youtube.png" alt="Youtube"></a></li>
+                        <li><a href="https://www.x.com" target="_blank"><img src="img/x.png" alt="X"></a></li>
+                        <li><a href="https://www.instagram.com" target="_blank"><img src="img/instagram.png" alt="Instagram"></a></li>
+                        <li><a href="https://www.tiktok.com" target="_blank"><img src="img/tik-tok.png" alt="Tik Tok"></a></li>
+                        <li><a href="https://www.youtube.com" target="_blank"><img src="img/youtube.png" alt="Youtube"></a></li>
                     </ul>
             </div>
         </div>
