--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#top">Inicio</a></li>
                 <li><a href="#noticias">Noticias</a></li>
                 <li><a href="#contactos">Contactos</a></li>
-                <li><a href="#quienes-somos">¿Quienes Somos?</a></li>
+                <li><a href="#quienes-somos">¿Quiénes Somos?</a></li>
             </ul>
         </nav>
     </header>
